tests/NormalTests/paczka1/small_fuzzy/27937209.err
Error in line 1: UFhv4wRO A727 55,6
Error in line 6: Qs78 A114 11,9
Error in line 7: 8a8B98F A743 98,3
